packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/res-004-no-relation.ttrp
// expect: TTRP-RES-004
import erp.er.*
container c target polars {
    a = load(sales_txn)
    b = load(sales_txn)
    j = join(left: a, right: b, on: relation no_such_rel)
}
